# pyiflabel

./: INSTALL  Makefile.in  PKG-INFO  PKG-INFO.in  README  USAGE  configure.ac  pyifbabel  pyifbabel.in  setup.py  setup.py.in
tests/: all_tests.py  run_tests.py  test_adrift.py  test_advsys.py  test_agt.py  test_alan.py  test_babel.py  test_blorb.py  test_executable.py  test_glulx.py  test_hugo.py  test_imgformats.py  test_level9.py  test_magscrolls.py  test_quest.py  test_storyformat.py  test_tads.py  test_twine.py  test_zcode.py
treatyofbabel/: __init__.py  babelerrors.py  ifiction.py  ifstory.py
treatyofbabel/formats/: adrift.py  advsys.py  agt.py  alan.py  executable.py  glulx.py  hugo.py  level9.py  magscrolls.py  quest.py  tads2.py  tads3.py  twine.py  zcode.py
treatyofbabel/utils/: _binaryfuncs.py  _imgfuncs.py
treatyofbabel/wrappers/: blorb.py
